# across

./: .gitignore  ABC8.CPP  ABC8.H  ABC_MAKE.CPP  CMakeLists.txt  DIALOG.CPP  DIALOG.H  DIGIT.CPP  DOBOZ.CPP  EDITOR.H  EDITTOLT.CPP  EDITTOOL.CPP  EDITUJ.CPP  EDITUJ.H  ED_CHECK.CPP  EGAVGA.CPP  GYURU.CPP  H_HIGH.CPP  H_WAV.CPP  KIRAJ320.CPP  KORNY.CPP  KORNY.H  LEPTET.CPP  LEPTET.H  MAGASSAG.CPP  MAGASSAG.H  MAIN.CPP  MAIN.H  MAINMENU.CPP  M_DD.H  M_K.H  M_V.H  OPTIONS.CPP  PEXTMENU.CPP  PIC8.CPP  PIC8.H  PIC8F.CPP  PLAY.CPP  QOPEN.CPP  QOPEN.H  (+15 more)
F_WIN95/: ALL.H  MISC.CPP  MISC.H  NEMKELL.CPP  PROBA.CPP  SOUND.CPP  SOUND.H  W_ALL.H  W_DD.CPP  W_DOSOS.CPP  W_K.CPP  W_MOUSE.CPP  W_NEMPUB.H  W_V.CPP
